feat: add animated background and improve game logic
- Introduced a new component for animated background effects in the Tic Tac Toe game.
- Updated game logic to handle winner state more effectively and improved type declarations.
- Removed unused time hook and adjusted styles for better UI presentation.
- Enhanced CSS with new animations for visual appeal.

--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-.bg-rose{
-    background-color: rgb(254 205 211)
+.bg-rose {
+  background-color: rgb(254 205 211);
 }
 
-.bg-sky{
-    background-color: rgb(186 230 253)
+.bg-sky {
+  background-color: rgb(186 230 253);
+}
+
+@keyframes float {
+  0%,
+  100% {
+    opacity: 0;
+    scale: 0%;
+  }
+  75% {
+    opacity: 100;
+    scale: 100%;
+  }
+}
+
+.animate-float {
+  animation: float 1s ease-out infinite;
 }
